--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,7 @@ def ROOM_VERSION = '2.4.2'
 def LIFECYCLE_VERSION = '2.4.1'
 
 dependencies {
+    implementation project(path: ':feedparser')
     /* Testing */
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
