chore(*): adds kotlin and compose support

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.proninyaroslav.libretorrent"
     android:installLocation="auto">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" tools:node="replace" />
+    <uses-permission
+        android:name="android.permission.WAKE_LOCK"
+        tools:node="replace" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -14,42 +17,49 @@
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
-    <uses-feature android:name="android.software.leanback"
+    <uses-feature
+        android:name="android.software.leanback"
         android:required="false" />
     <uses-feature
         android:name="android.hardware.wifi"
         android:required="false" />
 
     <application
-        android:name="MainApplication"
-        android:icon="@mipmap/ic_launcher"
-        android:banner="@drawable/ic_banner"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:supportsRtl="true"
+        android:name=".MainApplication"
         android:allowBackup="true"
+        android:banner="@drawable/ic_banner"
         android:fullBackupContent="true"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
-
-        <activity android:name=".ui.main.MainActivity"
-            android:theme="@style/AppTheme.Launcher"
-            android:exported="true">
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.Launcher">
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
@@ -57,156 +67,216 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-
         <activity
-            android:label="@string/app_name"
+            android:name=".ui.addtorrent.AddTorrentActivity"
             android:exported="true"
-            android:name=".ui.addtorrent.AddTorrentActivity">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="application/x-bittorrent" android:scheme="file" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="application/x-bittorrent"
+                    android:scheme="file" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:pathPattern=".*\\.torrent" android:scheme="file" />
+
+                <data
+                    android:host="*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="file" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="application/x-bittorrent" android:scheme="content" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="application/x-bittorrent"
+                    android:scheme="content" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:pathPattern=".*\\.torrent" android:scheme="content" />
+
+                <data
+                    android:host="*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="content" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:pathPattern=".*\\.torrent" android:scheme="http" />
+
+                <data
+                    android:host="*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:pathPattern=".*\\.torrent" android:scheme="https" />
+
+                <data
+                    android:host="*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="https" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="*/*" android:pathPattern=".*\\.torrent" android:scheme="http" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="*/*" android:pathPattern=".*\\.torrent" android:scheme="https" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.torrent"
+                    android:scheme="https" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="application/x-bittorrent" android:scheme="http" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="application/x-bittorrent"
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="*" android:mimeType="application/x-bittorrent" android:scheme="https" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="application/x-bittorrent"
+                    android:scheme="https" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="magnet" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.filemanager.FileManagerDialog" />
-
         <activity
-            android:label="@string/app_name"
-            android:name=".ui.detailtorrent.DetailTorrentActivity" />
-
-        <activity android:name=".ui.SendTextToClipboard"
-            android:label="@string/send_text_to_clipboard"
+            android:name=".ui.detailtorrent.DetailTorrentActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ui.SendTextToClipboard"
+            android:exported="true"
             android:icon="@drawable/ic_content_copy_grey600_48dp"
-            android:theme="@android:style/Theme.NoDisplay"
-            android:exported="true">
+            android:label="@string/send_text_to_clipboard"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.ALTERNATIVE" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.settings.SettingsActivity"
-            android:label="@string/settings"
-            android:exported="true">
+        <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="true"
+            android:label="@string/settings">
             <intent-filter>
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.settings.PreferenceActivity" />
         <activity
-            android:name=".ui.settings.PreferenceActivity" />
-
-        <activity android:name=".ui.errorreport.ErrorReportActivity"
-            android:theme="@style/AppTheme.Translucent"
-            android:process=":acra"
+            android:name=".ui.errorreport.ErrorReportActivity"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
-            android:launchMode="singleInstance" />
-
+            android:launchMode="singleInstance"
+            android:process=":acra"
+            android:theme="@style/AppTheme.Translucent" />
         <activity
-            android:label="@string/app_name"
-            android:name=".ui.feeds.FeedActivity" />
-
+            android:name=".ui.feeds.FeedActivity"
+            android:label="@string/app_name" />
         <activity
-            android:label="@string/app_name"
-            android:name=".ui.feeditems.FeedItemsActivity" />
-
+            android:name=".ui.feeditems.FeedItemsActivity"
+            android:label="@string/app_name" />
         <activity
-            android:label="@string/app_name"
             android:name=".ui.addfeed.AddFeedActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.Translucent">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
-                <data android:scheme="http"  android:host="*" android:mimeType="*/*" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:scheme="http" />
                 <data android:pathPattern=".*\\.xml" />
                 <data android:pathPattern=".*\\.rss" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
-                <data android:scheme="http" android:host="*" />
+                <data
+                    android:host="*"
+                    android:scheme="http" />
                 <data android:mimeType="text/xml" />
                 <data android:mimeType="application/rss+xml" />
                 <data android:mimeType="application/atom+xml" />
@@ -214,56 +284,58 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
-                <data android:scheme="https" android:host="*" android:mimeType="*/*" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:scheme="https" />
                 <data android:pathPattern=".*\\.xml" />
                 <data android:pathPattern=".*\\.rss" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:name="android.content.Intent.FLAG_ACTIVITY_NO_ANIMATION" />
-                <data android:scheme="https" android:host="*" />
+                <data
+                    android:host="*"
+                    android:scheme="https" />
                 <data android:mimeType="text/xml" />
                 <data android:mimeType="application/rss+xml" />
                 <data android:mimeType="application/atom+xml" />
                 <data android:mimeType="application/xml" />
             </intent-filter>
         </activity>
-
         <activity
-            android:label="@string/app_name"
             android:name=".ui.createtorrent.CreateTorrentActivity"
-            android:theme="@style/AppTheme.Translucent" />
-
-        <activity
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
             android:name=".ui.addlink.AddLinkActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.Translucent" />
-
         <activity
-            android:label="@string/app_name"
-            android:name=".ui.log.LogActivity" />
-
+            android:name=".ui.log.LogActivity"
+            android:label="@string/app_name" />
         <activity
-            android:label="@string/app_name"
-            android:name=".ui.log.LogSettingsActivity" />
-
+            android:name=".ui.log.LogSettingsActivity"
+            android:label="@string/app_name" />
         <activity
-            android:label="@string/app_name"
             android:name=".ui.addtag.AddTagActivity"
-            android:theme="@style/AppTheme.Translucent" />
-
-        <activity
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
             android:name=".ui.tag.SelectTagActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.Translucent" />
 
-        <service
-            android:name=".service.TorrentService" />
+        <service android:name=".service.TorrentService" />
 
         <receiver
             android:name=".receiver.NotificationReceiver"
@@ -273,7 +345,6 @@
                 <action android:name="org.proninyaroslav.libretorrent.receivers.NotificationReceiver.NOTIFY_ACTION_ADD_TORRENT" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".receiver.BootReceiver"
             android:exported="true">
@@ -284,9 +355,7 @@
                 <action android:name="android.app.action.SCHEDULE_EXACT_ALARM_PERMISSION_STATE_CHANGED" />
             </intent-filter>
         </receiver>
-
-        <receiver
-            android:name=".receiver.SchedulerReceiver" />
+        <receiver android:name=".receiver.SchedulerReceiver" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -295,7 +364,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
+
 </manifest>
