--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
-apply plugin: 'com.android.application'
-
+plugins {
+    id 'kotlin-android'
+    id 'com.android.application'
+}
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
         applicationId 'org.proninyaroslav.libretorrent'
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 25
         /*
          * Convection:
@@ -26,6 +28,24 @@ android {
         }
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    }
+
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
+
+    // Set both the Java and Kotlin compilers to target Java 8.
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
     }
 
     flavorDimensions "deploy"
@@ -115,6 +135,7 @@ def LIFECYCLE_VERSION = '2.4.1'
 
 dependencies {
     implementation project(path: ':feedparser')
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     /* Testing */
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
